[package]
name = "hexd"
version = "0.1.0"
edition = "2021"
license = "GNU GENERAL PUBLIC LICENSE V3"
description = "simple utility for converting from varios encodings"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
