[package]
name = "hexd"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0-only"
description = "simple utility for converting from varios encodings"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
